--- a/pgblackboard/static/queryplan.css
+++ b/pgblackboard/static/queryplan.css
@@ -2,11 +2,62 @@
 .light .node .node-back { fill: #fff; }
 .light .node text { fill: #333; }
 .light .edgePath path { stroke: #999; }
+.light .queryplan {
+    background-image: -webkit-linear-gradient(left
+                    ,rgba(0,0,0,.0)   0
+                    ,rgba(0,0,0,.0)  1px
+                    ,rgba(0,0,0,.1)  1px
+                    ,rgba(0,0,0,.1)  2px);
+
+    background-image: -moz-linear-gradient(left
+                    ,rgba(0,0,0,.0)   0
+                    ,rgba(0,0,0,.0)  1px
+                    ,rgba(0,0,0,.1)  1px
+                    ,rgba(0,0,0,.1)  2px);
+
+    background-image: -ms-linear-gradient(left
+                    ,rgba(0,0,0,.0)   0
+                    ,rgba(0,0,0,.0)  1px
+                    ,rgba(0,0,0,.1)  1px
+                    ,rgba(0,0,0,.1)  2px);
+
+    background-image: linear-gradient(to left
+                    ,rgba(0,0,0,.0)   0
+                    ,rgba(0,0,0,.0)  1px
+                    ,rgba(0,0,0,.1)  1px
+                    ,rgba(0,0,0,.1)  2px);
+    }
+
 
 .dark .queryplan { background-color: rgba(0,0,0,.3); }
 .dark .node .node-back { fill: #000; }
 .dark .node text { fill: #ddd; }
 .dark .edgePath path { stroke: #555; }
+.dark .queryplan {
+    background-image: -webkit-linear-gradient(left
+                    ,rgba(0,0,0,.1)   0
+                    ,rgba(0,0,0,.1)  1px
+                    ,rgba(0,0,0,.5)  1px
+                    ,rgba(0,0,0,.5)  2px);
+
+    background-image: -moz-linear-gradient(left
+                    ,rgba(0,0,0,.1)   0
+                    ,rgba(0,0,0,.1)  1px
+                    ,rgba(0,0,0,.5)  1px
+                    ,rgba(0,0,0,.5)  2px);
+
+    background-image: -ms-linear-gradient(left
+                    ,rgba(0,0,0,.1)   0
+                    ,rgba(0,0,0,.1)  1px
+                    ,rgba(0,0,0,.5)  1px
+                    ,rgba(0,0,0,.5)  2px);
+
+    background-image: linear-gradient(to left
+                    ,rgba(0,0,0,.1)   0
+                    ,rgba(0,0,0,.1)  1px
+                    ,rgba(0,0,0,.5)  1px
+                    ,rgba(0,0,0,.5)  2px);
+    }
 
 
 .node .node-overlay { fill: #888; fill-opacity: .5; }
@@ -14,7 +65,6 @@
 
 .blurred {
     opacity: .5;
-    -webkit-filter: blur(1px);
     }
 
 .queryplan,
@@ -39,33 +89,11 @@
        -moz-user-select: none;
 
 
-    background-size: 1em 1em;
-
-    background-image: -webkit-linear-gradient(45deg
-                        ,rgba(0,0,0, 0)   0
-                        ,rgba(0,0,0, 0)  20%
-                        ,rgba(0,0,0,.1)  20%
-                        ,rgba(0,0,0,.1)  40%
-                        ,rgba(0,0,0, 0)  40%
-                        ,rgba(0,0,0, 0)  60%
-                        ,rgba(0,0,0,.1)  60%
-                        ,rgba(0,0,0,.1)  80%
-                        ,rgba(0,0,0, 0)  80%
-                        ,rgba(0,0,0, 0) 100%);
-
-    background-image: linear-gradient(45deg
-                        ,rgba(0,0,0, 0)   0
-                        ,rgba(0,0,0, 0)  20%
-                        ,rgba(0,0,0,.1)  20%
-                        ,rgba(0,0,0,.1)  40%
-                        ,rgba(0,0,0, 0)  40%
-                        ,rgba(0,0,0, 0)  60%
-                        ,rgba(0,0,0,.1)  60%
-                        ,rgba(0,0,0,.1)  80%
-                        ,rgba(0,0,0, 0)  80%
-                        ,rgba(0,0,0, 0) 100%);
+    background-size: 2px 100%;
 
     }
+
+
 
 .queryplan:active {
     cursor: -webkit-grabbing;
