--- a/src/static/myqueries/myqueries.less
+++ b/src/static/myqueries/myqueries.less
@@ -81,5 +81,6 @@
 
 @font-face {
     font-family: 'myqueries-fontello';
-    src: data-uri('fontello/font/fontello.woff') format('woff');
+    src: data-uri('application/font-woff;base64',
+                  'fontello/font/fontello.woff') format('woff');
 }
