--- a/src/static/splitpanel/splitpanel.css
+++ b/src/static/splitpanel/splitpanel.css
@@ -1,9 +1,9 @@
-.v-splitpanel__splitter,
-.v-splitpanel--splitting {
+.splitpanel-v__splitter,
+.splitpanel-v--splitting {
     cursor: ns-resize;
     }
 
-.v-splitpanel__splitter {
+.splitpanel-v__splitter {
     position: absolute;
     left: 0;
     right: 0;
@@ -11,12 +11,12 @@
     height: 6px;
     }
 
-.h-splitpanel__splitter,
-.h-splitpanel--splitting {
+.splitpanel-h__splitter,
+.splitpanel-h--splitting {
     cursor: ew-resize;
     }
 
-.h-splitpanel__splitter {
+.splitpanel-h__splitter {
     position: absolute;
     right: 70%;
     top: 0;
@@ -24,13 +24,13 @@
     width: 6px;
     }
 
-.h-splitpanel,
-.v-splitpanel {
+.splitpanel-h,
+.splitpanel-v {
     position: relative;
     height: 100%;
     }
 
-.h-splitpanel__left {
+.splitpanel-h__left {
     position: absolute;
     top: 0;
     bottom: 0;
@@ -39,7 +39,7 @@
     margin-right: 6px;
     }
 
-.h-splitpanel__right {
+.splitpanel-h__right {
     position: absolute;
     top: 0;
     bottom: 0;
@@ -47,7 +47,7 @@
     left: 30%;
     }
 
-.v-splitpanel__top {
+.splitpanel-v__top {
     position: absolute;
     top: 0;
     left: 0;
@@ -56,7 +56,7 @@
     margin-bottom: 6px;
     }
 
-.v-splitpanel__bottom {
+.splitpanel-v__bottom {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -65,15 +65,15 @@
     }
 
 
-.h-splitpanel--splitting,
-.v-splitpanel--splitting {
+.splitpanel-h--splitting,
+.splitpanel-v--splitting {
     -webkit-user-select: none;
        -moz-user-select: none;
         -ms-user-select: none;
             user-select: none;
     }
 
-.h-splitpanel--splitting iframe,
-.v-splitpanel--splitting iframe {
+.splitpanel-h--splitting iframe,
+.splitpanel-v--splitting iframe {
     pointer-events: none;
     }
